﻿drkns 10.11.2014 20:11:52 +0200 - build 4184

1. Опция "Create folders in uppercase" удалена.

drkns 10.11.2014 19:31:00 +0200 - build 4183

1. Еще раз 4180.

zg 10.11.2014 19:23:23 +0200 - build 4182

1. уточнение 4061.1.

zg 10.11.2014 19:00:49 +0200 - build 4181

1. откат 4177.

2. переписан парсер строки перехода по altf8 в редакторе.

3. исправлено позиционирование по altf8 в строках, содержащих табуляции.

drkns 10.11.2014 18:50:48 +0200 - build 4180

1. Не работала опция "System settings/Create folders in uppercase".

w17 10.11.2014 18:14:28 +0300 - build 4179

1. Уточнение 4122.1

w17 10.11.2014 17:24:43 +0300 - build 4178

1. Уточнение 4122.1

zg 10.11.2014 16:08:11 +0200 - build 4177

1. altf8 в редакторе при отмене всё равно переходил на введённую строку.

drkns 09.11.2014 02:12:34 +0200 - build 4176

1. GCC.

drkns 09.11.2014 00:34:51 +0200 - build 4175

1. Уточнение 4174.

drkns 08.11.2014 23:16:10 +0200 - build 4174

1. Рефакторинг.

2. В некоторых случаях не обновлялась линейка клавиш при открытии редактора.

3. Добавим знание о IO_REPARSE_TAG_FILE_PLACEHOLDER (Windows 8.1 OneDrive).

zg 07.11.2014 12:33:42 +0200 - build 4173

1. с форума:
   При вызове из редактора из юзер меню такой команды
   lua: far.Message("from lua")
   во время показанного диалога последняя строка в редакторе закрашивается черным.

zg 07.11.2014 03:22:43 +0200 - build 4172

1. у каждого экранного объекта теперь есть в обязательном порядке родитель - окно.

drkns 06.11.2014 15:56:10 +0200 - build 4171

1. С форума: Excepton occured: bad allocation

zg 05.11.2014 16:44:44 +0200 - build 4170

1. уточнение 4047 для плагииновых панелей:
   Если открыть в панели .7z-файл, содержащий внутри папки, стать на папку и нажать CtrlQ, показывает:
   Folders          0
   Files            0
   Files size       0
   Allocated size   0 (0%)

drkns 02.11.2014 13:15:16 +0200 - build 4169

1. Ещё пара уточнений 4167.

drkns 02.11.2014 11:38:28 +0200 - build 4168

1. Уточнение 4167.
