@@ -1,4 +1,8 @@
-﻿drkns 10.11.2014 20:11:52 +0200 - build 4184
+﻿w17 11.11.2014 15:50:30 +0300 - build 4185
+
+1. Quick/Diz Viewer Keybar corrections
+
+drkns 10.11.2014 20:11:52 +0200 - build 4184
 
 1. Опция "Create folders in uppercase" удалена.
 
